--- a/cog/templates/cog/wps/_wps_config_js.html
+++ b/cog/templates/cog/wps/_wps_config_js.html
@@ -50,7 +50,7 @@ wps = {
   resizeDir: [false, false, false, false],
   data: {},
   DOMAINS: [
-    { name: 'World', lat: [90, -90],  lon: [0, 360] },
+    { name: 'World' },
     { name: 'Northern Hemisphere', lat: [90, 0] },
     { name: 'Southern Hemisphere', lat: [0, -90] },
     { name: 'Tropics', lat: [23.4, -23.4] },
@@ -74,17 +74,16 @@ wps.loadDomains = function(dispatch) {
       .on('change', function() {
         var domain = wps.DOMAINS[this.selectedIndex];
 
-        if (domain.hasOwnProperty('lon')) {
-          d3.select('#lon-start').attr('value', domain.lon[0]);
+        var lon = domain.lon || [0, 360];
+        var lat = domain.lat || [90, -90];
 
-          d3.select('#lon-stop').attr('value', domain.lon[1]);
-        }
+        d3.select('#lon-start').attr('value', lon[0]);
 
-        if (domain.hasOwnProperty('lat')) {
-          d3.select('#lat-start').attr('value', domain.lat[0]);
+        d3.select('#lon-stop').attr('value', lon[1]);
 
-          d3.select('#lat-stop').attr('value', domain.lat[1]);
-        }
+        d3.select('#lat-start').attr('value', lat[0]);
+
+        d3.select('#lat-stop').attr('value', lat[1]);
 
         wps.data.start = wps.projection(wps.geoCoord('start'));
 
