--- a/cog/templates/cog/wps/wps.html
+++ b/cog/templates/cog/wps/wps.html
@@ -121,6 +121,8 @@
       </table>
     </div>
     <div id="map" class="span-23 last">
+      <label for="center-pacific">Center on Pacific</label>
+      <input id="center-pacific" type="checkbox" />
       <svg />
     </div>
   </form>
