Fixes updating the domain when changing the centering of the map.

--- a/cog/templates/cog/wps/_wps_config_js.html
+++ b/cog/templates/cog/wps/_wps_config_js.html
@@ -377,6 +377,8 @@ wps.centerPacific = function() {
         .ease(d3.easePolyIn)
       )
       .attr('d', wps.path);
+
+  wps.dispatch.call('updateUIROI');
 }
 
 wps.domReady = function() {
